feat: 회원가입/광고등록 개선 및 LunaAlba 리브랜딩 - 회원가입 페이지 전면 재설계 (UI/UX 개선) - 휴대폰 본인인증 기능 추가 (PhoneVerification) - 사업자 인증 및 등록증 업로드 기능 추가 (BusinessVerification) - 광고등록 Step 1 업소 정보 개선 (연락처, 메신저, 로고) - QueenAlba → LunaAlba 리브랜딩 - 테스트 계정 시드 기능 추가 - 서비스 연동 가이드 문서화

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>queenalba-clone</title>
+    <title>LunaAlba - 밤의 일자리 구인구직</title>
   </head>
   <body>
     <div id="root"></div>
