--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Security Headers -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <!-- X-Frame-Options는 HTTP 헤더로만 설정 가능하므로 제거 -->
   <meta name="referrer" content="no-referrer" />
 
   <!-- Disable caching for sensitive pages -->
@@ -23,16 +23,18 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
 
-  <!-- Microsoft Clarity - Free Session Recording & Heatmaps -->
-  <!-- Get your project ID from https://clarity.microsoft.com -->
+  <!-- Microsoft Clarity - 실제 Project ID를 입력하면 자동 활성화됩니다 -->
+  <!-- 1. https://clarity.microsoft.com 에서 프로젝트 생성 -->
+  <!-- 2. 아래 CLARITY_PROJECT_ID를 실제 ID로 교체 -->
   <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
+      // Project ID가 설정되지 않으면 스크립트 실행 안함
+      if (i === 'CLARITY_PROJECT_ID') return;
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "YOUR_CLARITY_PROJECT_ID");
+    })(window, document, "clarity", "script", "CLARITY_PROJECT_ID");
   </script>
-  <!-- Replace YOUR_CLARITY_PROJECT_ID with your actual Clarity project ID -->
 
   <!-- Google Analytics 4 (Optional) -->
   <!-- Get your Measurement ID from https://analytics.google.com -->
