--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LunaAlba - 밤의 일자리 구인구직</title>
+  <title>달빛알바 (DalbitAlba) - 밤의 일자리 구인구직</title>
 
-  <!-- Anti-Crawling & SEO Control -->
-  <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex" />
-  <meta name="googlebot" content="noindex, nofollow" />
-  <meta name="bingbot" content="noindex, nofollow" />
-  <meta http-equiv="X-Robots-Tag" content="noindex, nofollow" />
+  <!-- SEO & Social Control -->
+  <meta name="robots" content="index, follow" />
+  <meta name="googlebot" content="index, follow" />
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="달빛알바 (DalbitAlba) - 대한민국 No.1 유흥알바 채용 플랫폼" />
+  <meta property="og:description" content="고소득 알바, 유흥알바, 밤알바 구인구직은 달빛알바에서. 지역별, 업종별, 테마별 맞춤 일자리를 쉽고 빠르게 찾아보세요." />
+  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:url" content="https://www.dalbitalba.co.kr" />
+  <meta property="og:site_name" content="DalbitAlba" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="LunaAlba - 대한민국 No.1 유흥알바 채용 플랫폼" />
+  <meta name="twitter:description" content="고소득 알바, 유흥알바 구인구직은 루나알바에서. 쉽고 빠른 채용 정보." />
+  <meta name="twitter:image" content="/og-image.png" />
 
   <!-- Security Headers -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
@@ -28,12 +40,10 @@
   <!-- 2. 아래 CLARITY_PROJECT_ID를 실제 ID로 교체 -->
   <script type="text/javascript">
     (function (c, l, a, r, i, t, y) {
-      // Project ID가 설정되지 않으면 스크립트 실행 안함
-      if (i === 'CLARITY_PROJECT_ID') return;
       c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
       t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
       y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-    })(window, document, "clarity", "script", "CLARITY_PROJECT_ID");
+    })(window, document, "clarity", "script", "upekygy0jj");
   </script>
 
   <!-- Google Analytics 4 (Optional) -->
