fix: 브랜딩 완료 - 로고, Twitter 메타 태그 업데이트
- index.html: Twitter 카드 메타 태그 달빛알바로 변경
- public/logo.png: 새 달빛알바 로고로 교체
- public/favicon.png: 새 달빛알바 favicon으로 교체

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="LunaAlba - 대한민국 No.1 유흥알바 채용 플랫폼" />
-  <meta name="twitter:description" content="고소득 알바, 유흥알바 구인구직은 루나알바에서. 쉽고 빠른 채용 정보." />
+  <meta name="twitter:title" content="달빛알바 - 대한민국 No.1 유흥알바 채용 플랫폼" />
+  <meta name="twitter:description" content="고소득 알바, 유흥알바 구인구직은 달빛알바에서. 쉽고 빠른 채용 정보." />
   <meta name="twitter:image" content="/og-image.png" />
 
   <!-- Security Headers -->
